<resources>
    <string name="app_name">MINSIDE</string>
    <!-- Strings related to login -->
    <string name="facebook_app_id">[516474589146389]</string>
    <string name="fb_login_protocol_scheme">fb[516474589146389]</string>
    <string name="prompt_email">電子郵件信箱</string>
    <string name="prompt_password">密碼</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signUpBtn">"現在就加入"</string>
    <string name="loginBtn">"已經有帳戶了嗎?從這裡登入"</string>
    <string name="nextBtn">"下一步"</string>
    <string name="signUp">"註冊"</string>
    <string name="signUpAccount">"註冊帳號"</string>
    <string name="your_friend">"好友"</string>
    <string name="login">"登入"</string>
    <string name="fast_login">"快速登入"</string>
    <string name="nickName">"暱稱"</string>
    <string name="birthday">"出生日期"</string>
    <string name="gender">"性別"</string>
    <string name="password">"請輸入密碼"</string>
    <string name="forget_password">"忘記密碼?"</string>
    <string name="re_enter_pwd">"請重複輸入密碼"</string>
    <string name="input_email">"請輸入電子信箱"</string>
    <string name="edit_userInfo">"編輯個人檔案"</string>
    <string name="myself">"自己"</string>
    <string name="name">"NAME"</string>
    <string name="Hello">"Hello!"</string>
    <string name="howmanyfriends">"好友(1人)"</string>
    <string name="PJwant">"好想養狗"</string>
    <string name="Yuan">"智媛"</string>
    <string name="Id_Yuan">"12345678"</string>
    <string name="NYO_Yuan">"智媛/22"</string>
    <string name="Birth_Yuan">"1997.09.27  天秤"</string>
    <string name="Ya">"旻雅"</string>
    <string name="Id_Ya">"11223344"</string>
    <string name="NYO_Ya">"旻雅/18"</string>
    <string name="Birth_Ya">"2001.03.11  雙魚"</string>
    <string name="Hee">"在熙"</string>
    <string name="Id_Hee">"13572468"</string>
    <string name="NYO_Hee">"在熙/25"</string>
    <string name="Birth_Hee">"1994.06.20  雙子"</string>
    <string name="Hsiang">"金翔"</string>
    <string name="Id_Hsiang">"77777777"</string>
    <string name="NYO_Hsiang">"金翔/21"</string>
    <string name="Birth_Hsiang">"1997.12.12  射手"</string>
    <string name="InfoPage">"個人頁面"</string>
    <string name="Id_Jack">"00000005"</string>
    <string name="pairPage">"配對"</string>
    <string name="Try">"trying"</string>
    <string name="TagExercise">"#運動"</string>
    <string name="TagFood">"#美食"</string>
    <string name="TagMovie">"#電影"</string>
    <string name="TagArt">"#藝術"</string>
    <string name="TagPic">"#攝影"</string>
    <string name="TagCook">"#烹飪"</string>
    <string name="TagMakeup">"#美妝"</string>
    <string name="TagDraw">"#畫畫"</string>
    <string name="TagWorkout">"#健身"</string>
    <string name="TagMusic">"#音樂"</string>
    <string name="TagSing">"#唱歌"</string>
    <string name="TagShop">"#購物"</string>
    <string name="TagPet">"#寵物"</string>
    <string name="TagTravel">"#旅遊"</string>
    <string name="TagIdolDrama">"#偶像劇"</string>
    <string name="TagDrink">"#飲料"</string>
    <string name="Tag3C">"#3C"</string>
    <string name="TagGame">"#遊戲"</string>
    <string name="TagPhoto">"#攝影"</string>
    <string name="TagWine">"#品酒"</string>
    <string name="TagComic">"#漫畫"</string>
    <string name="TagRnB">"#R&amp;B"</string>
    <string name="TagBaskatball">"#籃球"</string>
    <string name="TagVolleyball">"#排球"</string>
    <string name="YourFace">"造型"</string>
    <string name="pj">"PJ"</string>
    <string name="pj_Hi">"好想去加州"</string>
    <string name="Birth_pj">"1995.7.12  巨蟹"</string>
    <string name="Robot_title">"聊天機器人-minside"</string>

    <string name="sarah">"Sarah"</string>
    <string name="sarah_id">"ID:00000047"</string>
    <string name="sarah_birth">"1998.3.4  雙魚"</string>
    <string name="sarah_hi">"大四痛苦肥宅"</string>

    //this is for navigation
    <string name="nav_friend">"好友"</string>
    <string name="nav_chat">"聊天"</string>
    <string name="nav_home">"主頁"</string>
    <string name="nav_date">"配對"</string>
    <string name="nav_robot">"機器人聊天"</string>
</resources>
